[package]
name = "exifrenamer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
filetime = "0.2.20"
glob = "0.3.1"
kamadak-exif = "0.5.5"
tempfile = "3.4.0"
time = { version = "0.3.20", features = ["formatting", "local-offset", "macros"] }

[profile.release]
lto = true
codegen-units = 1
